tests/macros/expand/plugin.rs
fn main() {
    let q = discourse::questions![Expand { plugin: todo!() }];
}
